--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "node-sass": "^6.0.1",
@@ -17,6 +18,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "swiper": "^6.8.4",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
